syntax = "proto3";

package proto;

option go_package = "qwik.in/productsAdmin/proto";

message Request {
	string id = 1;
}

message Response {
	string id = 1;
	int32 quantity = 2;
}

service QuantityService {
	rpc getQuantity(Request) returns (Response);
}